test/bad/multiple_classes.lat
class a {
    int b;
}
class a {
    int b;
}
int main() {
    return 0;
}
